--- a/.github/workflows/Helloworld.yml
+++ b/.github/workflows/Helloworld.yml
@@ -12,4 +12,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "Print Hello World"
-        run: echo "Hello world"
+        run: |
+           echo "hello world"
+           echo "available"
